# pangalactic-creditconverter

./: .gitattributes  .rustc_info.json  README.md  build_docs.sh
.github/workflows/: release.yml  rust.yml
debug/.fingerprint/aho-corasick-604503eb7f4513b4/: lib-aho_corasick  lib-aho_corasick.json
debug/.fingerprint/atty-c2ffb6d820d045a3/: lib-atty  lib-atty.json
debug/.fingerprint/atty-e755d606ea8000aa/: lib-atty  lib-atty.json
debug/.fingerprint/clap-c3b27a88a1011fb8/: lib-clap  lib-clap.json
debug/.fingerprint/clap-c928a2eae2b094b3/: lib-clap  lib-clap.json
debug/.fingerprint/clap_lex-022a4eb97e5ec0b6/: lib-clap_lex  lib-clap_lex.json
debug/.fingerprint/libc-070a6488f09d274c/: lib-libc  lib-libc.json
debug/.fingerprint/libc-4287820d4658b87a/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/libc-637747035302619c/: run-build-script-build-script-build  (+1 more)
doc/: crates.js  search-index.js  settings.html
doc/pangalacticcc/: all.html  fn.answer_how_many_credits.html  fn.answer_how_much.html  fn.get_args.html  fn.open.html  fn.run.html  index.html  sidebar-items.js  struct.Config.html
docs/: .rustc_info.json  index.html
docs/doc/: search-index.js  settings.html  source-files.js
pangalacticcc/: Cargo.toml
pangalacticcc/src/: lib.rs  main.rs  roman.rs  textprocessing.rs
pangalacticcc/tests/: cli.rs
pangalacticcc/tests/expected/: input1_reordered.txt.out  input2.txt.out  input3_confusing_unit.txt.out
pangalacticcc/tests/input/: input1.txt  input1_reordered.txt  input2.txt  input3_confusing_unit.txt
(+153 files in other folders)
