[package]
name = "pangalacticcc"
version = "0.1.2"
edition = "2021"
description = "A calculator for hitchhiking merchants all across the galaxy and beyond."
authors = ["Janina Mass <janina.mass@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
regex = "1.5"
lazy_static = "1.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
rand = "0.8"